--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-08 -->
+<!-- 2023-02-10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -34,7 +34,7 @@
 <div id="content" class="content">
 <header>
 <h1 class="title">173.NET</h1>
-</header><h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">毕业季</h3>
+</header><h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">就业季 (明确方向，做好准备)</h3>
 
 <div id="main">
 
@@ -152,7 +152,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-08</p>
+<p class="date">Created: 2023-02-10</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
