best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-10 -->
+<!-- 2023-02-14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -50,6 +50,9 @@
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
+<ul class="org-ul">
+<li><a href="111/tasks.html">任务和作业</a></li>
+</ul>
 <ul class="org-ul">
 <li>database
 <ul class="org-ul">
@@ -152,7 +155,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-10</p>
+<p class="date">Created: 2023-02-14</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
