best_try_and_best_chance

--- a/html/database/5-nosql.html
+++ b/html/database/5-nosql.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
 <!-- 2023-02-15 -->
-=======
-<!-- 2022-12-15 -->
->>>>>>> b873927d59ae478d5c4fc89b74c5527cdf0507f3
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NoSQL</title>
@@ -26,31 +22,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<<<<<<< HEAD
 <li><a href="#org34307f1">1. NoSQL</a></li>
 <li><a href="#orgd4c7b7f">2. MongoDB</a>
 <ul>
 <li><a href="#org31df017">2.1. 安装</a></li>
 <li><a href="#org7ff0d27">2.2. 运行服务</a></li>
 <li><a href="#org6ca0f24">2.3. 客户端连接</a></li>
+<li><a href="#org8387ffa">2.4. 基本使用</a></li>
 </ul>
 </li>
 <li><a href="#orga661eca">3. Redis</a></li>
-=======
-<li><a href="#org3b62387">1. 111</a></li>
->>>>>>> b873927d59ae478d5c4fc89b74c5527cdf0507f3
 </ul>
 </div>
 </nav>
 
 
-<<<<<<< HEAD
 <section id="outline-container-org34307f1" class="outline-2">
 <h2 id="org34307f1"><span class="section-number-2">1.</span> NoSQL</h2>
-=======
-<section id="outline-container-org3b62387" class="outline-2">
-<h2 id="org3b62387"><span class="section-number-2">1.</span> 111</h2>
->>>>>>> b873927d59ae478d5c4fc89b74c5527cdf0507f3
 <div class="outline-text-2" id="text-1">
 <p>
 名字解释:
@@ -153,6 +141,15 @@ mongosh [options] [db address] [file names (ending in .js or .mongodb)]
 </pre>
 </div>
 </div>
+
+<div id="outline-container-org8387ffa" class="outline-3">
+<h3 id="org8387ffa"><span class="section-number-3">2.4.</span> 基本使用</h3>
+<div class="outline-text-3" id="text-2-4">
+<p>
+db &#x2013; collection &#x2013; document
+</p>
+</div>
+</div>
 </section>
 
 <section id="outline-container-orga661eca" class="outline-2">
@@ -166,11 +163,7 @@ mongosh [options] [db address] [file names (ending in .js or .mongodb)]
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<<<<<<< HEAD
 <p class="date">Created: 2023-02-15</p>
-=======
-<p class="date">Created: 2022-12-15</p>
->>>>>>> b873927d59ae478d5c4fc89b74c5527cdf0507f3
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
