--- a/html/database/5-nosql.html
+++ b/html/database/5-nosql.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-15 -->
+<!-- 2023-02-16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NoSQL</title>
@@ -220,7 +220,7 @@ db.users.remove<span style="color: #000000;">(</span><span style="color: #dd22dd
 <p>
 Database API (db.xxx):
 </p>
-<pre class="example" id="org6aed8c4">
+<pre class="example" id="orgcf58351">
 adminCommand                               Runs an arbitrary command against the admin database.
 aggregate                                  Runs a specified admin/diagnostic pipeline which does not require an underlying collection.
 auth                                       Allows a user to authenticate to the database from within the shell.
@@ -297,7 +297,7 @@ watch                                      Opens a change stream cursor on the d
 <p>
 Collection API (db.books.xxx):
 </p>
-<pre class="example" id="org9862a90">
+<pre class="example" id="orgd396141">
 aggregate                                  Calculates aggregate values for the data in a collection or a view.
 bulkWrite                                  Performs multiple write operations with controls for order of execution.
 compactStructuredEncryptionData            Compacts structured encryption data
@@ -367,11 +367,64 @@ watch                                      Opens a change stream cursor on the c
 <h3 id="org864313b"><span class="section-number-3">2.4.</span> 客户端 (.NET MongoDB.Driver)</h3>
 <div class="outline-text-3" id="text-2-4">
 <p>
-pass
+<a href="https://github.com/mongodb/mongo-csharp-driver">https://github.com/mongodb/mongo-csharp-driver</a>
 </p>
+
+<p>
+首先，需要将数据库的驱动添加到项目中:
+</p>
+<pre class="example">
+dotnet add package MongoDB.Driver
+</pre>
+
+
+<p>
+然后，就可以使用了。
+</p>
+
+<p>
+使用通用的 BsonDocument 表达数据:
+</p>
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #005f5f;">var</span> <span style="color: #005e8b;">client</span> = <span style="color: #531ab6;">new</span> <span style="color: #005f5f;">MongoClient</span><span style="color: #000000;">(</span><span style="color: #3548cf;">"mongodb://localhost:27017"</span><span style="color: #000000;">)</span>;
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">database</span> = client.<span style="color: #721045;">GetDatabase</span><span style="color: #000000;">(</span><span style="color: #3548cf;">"foo"</span><span style="color: #000000;">)</span>;
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">collection</span> = database.<span style="color: #721045;">GetCollection</span><span style="color: #000000;">&lt;</span><span style="color: #005f5f;">BsonDocument</span><span style="color: #000000;">&gt;(</span><span style="color: #3548cf;">"bar"</span><span style="color: #000000;">)</span>;
+
+<span style="color: #531ab6;">await</span> collection.<span style="color: #721045;">InsertOneAsync</span><span style="color: #000000;">(</span><span style="color: #531ab6;">new</span> <span style="color: #005f5f;">BsonDocument</span><span style="color: #dd22dd;">(</span><span style="color: #3548cf;">"Name"</span>, <span style="color: #3548cf;">"Jack"</span><span style="color: #dd22dd;">)</span><span style="color: #000000;">)</span>;
+
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">list</span> = <span style="color: #531ab6;">await</span> collection.<span style="color: #721045;">Find</span><span style="color: #000000;">(</span><span style="color: #531ab6;">new</span> <span style="color: #005f5f;">BsonDocument</span><span style="color: #dd22dd;">(</span><span style="color: #3548cf;">"Name"</span>, <span style="color: #3548cf;">"Jack"</span><span style="color: #dd22dd;">)</span><span style="color: #000000;">)</span>.<span style="color: #721045;">ToListAsync</span><span style="color: #000000;">()</span>;
+
+<span style="color: #531ab6;">foreach</span><span style="color: #000000;">(</span><span style="color: #005f5f;">var</span> <span style="color: #005e8b;">document</span> <span style="color: #531ab6;">in</span> list<span style="color: #000000;">)</span>
+<span style="color: #000000;">{</span>
+    Console.<span style="color: #721045;">WriteLine</span><span style="color: #dd22dd;">(</span>document<span style="color: #008899;">[</span><span style="color: #3548cf;">"Name"</span><span style="color: #008899;">]</span><span style="color: #dd22dd;">)</span>;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+
+<p>
+使用强类型表达数据:
+</p>
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #531ab6;">public</span> <span style="color: #531ab6;">class</span> <span style="color: #005f5f;">Person</span> <span style="color: #000000;">{</span> <span style="color: #531ab6;">public</span> <span style="color: #005f5f;">ObjectId</span> <span style="color: #005e8b;">Id</span> <span style="color: #dd22dd;">{</span> <span style="color: #531ab6;">get</span>; <span style="color: #531ab6;">set</span>; <span style="color: #dd22dd;">}</span> <span style="color: #531ab6;">public</span> <span style="color: #005f5f;">string</span> <span style="color: #005e8b;">Name</span> <span style="color: #dd22dd;">{</span> <span style="color: #531ab6;">get</span>; <span style="color: #531ab6;">set</span>; <span style="color: #dd22dd;">}</span> <span style="color: #000000;">}</span>
+
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">client</span> = <span style="color: #531ab6;">new</span> <span style="color: #005f5f;">MongoClient</span><span style="color: #000000;">(</span><span style="color: #3548cf;">"mongodb://localhost:27017"</span><span style="color: #000000;">)</span>;
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">database</span> = client.<span style="color: #721045;">GetDatabase</span><span style="color: #000000;">(</span><span style="color: #3548cf;">"foo"</span><span style="color: #000000;">)</span>;
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">collection</span> = database.<span style="color: #721045;">GetCollection</span><span style="color: #000000;">&lt;</span><span style="color: #005f5f;">Person</span><span style="color: #000000;">&gt;(</span><span style="color: #3548cf;">"bar"</span><span style="color: #000000;">)</span>;
+
+<span style="color: #531ab6;">await</span> collection.<span style="color: #721045;">InsertOneAsync</span><span style="color: #000000;">(</span><span style="color: #531ab6;">new</span> <span style="color: #005f5f;">Person</span> <span style="color: #dd22dd;">{</span> <span style="color: #005e8b;">Name</span> = <span style="color: #3548cf;">"Jack"</span> <span style="color: #dd22dd;">}</span><span style="color: #000000;">)</span>;
+
+<span style="color: #005f5f;">var</span> <span style="color: #005e8b;">list</span> = <span style="color: #531ab6;">await</span> collection.<span style="color: #721045;">Find</span><span style="color: #000000;">(</span>x =&gt; x.Name == <span style="color: #3548cf;">"Jack"</span><span style="color: #000000;">)</span>.<span style="color: #721045;">ToListAsync</span><span style="color: #000000;">()</span>;
+
+<span style="color: #531ab6;">foreach</span><span style="color: #000000;">(</span><span style="color: #005f5f;">var</span> <span style="color: #005e8b;">person</span> <span style="color: #531ab6;">in</span> list<span style="color: #000000;">)</span>
+<span style="color: #000000;">{</span>
+    Console.<span style="color: #721045;">WriteLine</span><span style="color: #dd22dd;">(</span>person.Name<span style="color: #dd22dd;">)</span>;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
 </div>
 </div>
 </section>
+
 
 <section id="outline-container-orga661eca" class="outline-2">
 <h2 id="orga661eca"><span class="section-number-2">3.</span> Redis</h2>
@@ -384,7 +437,7 @@ pass
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-15</p>
+<p class="date">Created: 2023-02-16</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
