best_try_and_best_chance

--- a/html/database/5-nosql.html
+++ b/html/database/5-nosql.html
@@ -220,7 +220,7 @@ db.users.remove<span style="color: #000000;">(</span><span style="color: #dd22dd
 <p>
 Database API (db.xxx):
 </p>
-<pre class="example" id="orgcf58351">
+<pre class="example" id="orgfa38270">
 adminCommand                               Runs an arbitrary command against the admin database.
 aggregate                                  Runs a specified admin/diagnostic pipeline which does not require an underlying collection.
 auth                                       Allows a user to authenticate to the database from within the shell.
@@ -297,7 +297,7 @@ watch                                      Opens a change stream cursor on the d
 <p>
 Collection API (db.books.xxx):
 </p>
-<pre class="example" id="orgd396141">
+<pre class="example" id="org1c3bd6a">
 aggregate                                  Calculates aggregate values for the data in a collection or a view.
 bulkWrite                                  Performs multiple write operations with controls for order of execution.
 compactStructuredEncryptionData            Compacts structured encryption data
@@ -421,10 +421,14 @@ dotnet add package MongoDB.Driver
 <span style="color: #000000;">}</span>
 </pre>
 </div>
+
+<p>
+更多用法请参考官方文档: <br>
+<a href="https://www.mongodb.com/docs/drivers/csharp/current/quick-start/">https://www.mongodb.com/docs/drivers/csharp/current/quick-start/</a>
+</p>
 </div>
 </div>
 </section>
-
 
 <section id="outline-container-orga661eca" class="outline-2">
 <h2 id="orga661eca"><span class="section-number-2">3.</span> Redis</h2>
