best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
+<li><a href="111/notes.html">Tips</a></li>
 <li><a href="111/tasks.html">任务和作业</a></li>
 </ul>
 <ul class="org-ul">
@@ -75,7 +76,6 @@
 </ul></li>
 <li>miscellaneous
 <ul class="org-ul">
-<li><a href="miscellaneous/english.html">English</a></li>
 <li><a href="miscellaneous/misc.html">其他</a></li>
 <li><a href="miscellaneous/skills.html">每天很多小技巧</a></li>
 </ul></li>
