--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-20 -->
+<!-- 2023-02-21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap for project _notes_yao63</title>
@@ -44,6 +44,7 @@
 <li><a href="frontend/0-http.html">HTTP</a></li>
 <li><a href="frontend/1-html+css.html">HTML/CSS</a></li>
 <li><a href="frontend/2-javascript.html">JavaScript</a></li>
+<li><a href="frontend/3-openapi.html">OpenAPI/Swagger</a></li>
 </ul></li>
 <li>miscellaneous
 <ul class="org-ul">
@@ -54,7 +55,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-20</p>
+<p class="date">Created: 2023-02-21</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
