best_try_and_best_chance

--- a/html/frontend/3-openapi.html
+++ b/html/frontend/3-openapi.html
@@ -24,7 +24,12 @@
 <ul>
 <li><a href="#org6d2a7cd">1. OpenAPI</a></li>
 <li><a href="#org2da1def">2. Swagger</a></li>
-<li><a href="#org921128e">3. OpenAPI specs 示例</a></li>
+<li><a href="#org921128e">3. OpenAPI specs 示例</a>
+<ul>
+<li><a href="#org2113ab6">3.1. yaml 格式</a></li>
+<li><a href="#orgb03411e">3.2. json 格式</a></li>
+</ul>
+</li>
 <li><a href="#orgee67f2d">4. xml / json / yaml</a></li>
 </ul>
 </div>
@@ -73,6 +78,14 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
 <section id="outline-container-org921128e" class="outline-2">
 <h2 id="org921128e"><span class="section-number-2">3.</span> OpenAPI specs 示例</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+宠物商店
+</p>
+</div>
+
+<div id="outline-container-org2113ab6" class="outline-3">
+<h3 id="org2113ab6"><span class="section-number-3">3.1.</span> yaml 格式</h3>
+<div class="outline-text-3" id="text-3-1">
 <div class="org-src-container">
 <pre class="src src-yaml"><span class="linenr">  1: </span><span style="color: #005e8b;">openapi</span>: 3.0.3
 <span class="linenr">  2: </span><span style="color: #005e8b;">info</span>:
@@ -878,7 +891,12 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
 <span class="linenr">802: </span>      <span style="color: #005e8b;">in</span>: header
 </pre>
 </div>
+</div>
+</div>
 
+<div id="outline-container-orgb03411e" class="outline-3">
+<h3 id="orgb03411e"><span class="section-number-3">3.2.</span> json 格式</h3>
+<div class="outline-text-3" id="text-3-2">
 <div class="org-src-container">
 <pre class="src src-json"><span class="linenr">   1: </span><span style="color: #000000;">{</span>
 <span class="linenr">   2: </span>  <span style="color: #531ab6;">"openapi"</span>: <span style="color: #3548cf;">"3.0.3"</span>,
@@ -2106,6 +2124,7 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
 <span class="linenr">1224: </span>  <span style="color: #dd22dd;">}</span>
 <span class="linenr">1225: </span><span style="color: #000000;">}</span>
 </pre>
+</div>
 </div>
 </div>
 </section>
