best_try_and_best_chance

--- a/html/frontend/3-openapi.html
+++ b/html/frontend/3-openapi.html
@@ -2165,16 +2165,12 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
 </p>
 <div class="org-src-container">
 <pre class="src src-yaml"><span style="color: #005e8b;">students</span>:
-  <span style="color: #005e8b;">student</span>:
-    <span style="color: #005e8b;">name</span>: xxx
+  - <span style="color: #005e8b;">name</span>: xxx
     <span style="color: #005e8b;">age</span>: 18
     <span style="color: #005e8b;">teachers</span>:
-      <span style="color: #005e8b;">teacher</span>:
-        <span style="color: #005e8b;">name</span>: niu
-      <span style="color: #005e8b;">teacher</span>:
-        <span style="color: #005e8b;">name</span>: zhu
-  <span style="color: #005e8b;">student</span>:
-    <span style="color: #005e8b;">name</span>: yyy
+      - <span style="color: #005e8b;">name</span>: niu
+      - <span style="color: #005e8b;">name</span>: zhu
+  - <span style="color: #005e8b;">name</span>: yyy
     <span style="color: #005e8b;">age</span>: 20
 </pre>
 </div>
