best_try_and_best_chance

--- a/html/frontend/3-openapi.html
+++ b/html/frontend/3-openapi.html
@@ -2169,7 +2169,9 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
     <span style="color: #005e8b;">age</span>: 18
     <span style="color: #005e8b;">teachers</span>:
       - <span style="color: #005e8b;">name</span>: niu
+        <span style="color: #005e8b;">age</span>: 33
       - <span style="color: #005e8b;">name</span>: zhu
+        <span style="color: #005e8b;">age</span>: 44
   - <span style="color: #005e8b;">name</span>: yyy
     <span style="color: #005e8b;">age</span>: 20
 </pre>
